--- a/languages/rest-xmlrpc-data-checker-it_IT.po
+++ b/languages/rest-xmlrpc-data-checker-it_IT.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: REST XML-RPC Data Checker 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/plugins/rest-xmlrpc-data-"
 "checker\n"
-"POT-Creation-Date: 2018-11-11 19:25+0100\n"
-"PO-Revision-Date: 2018-11-11 19:27+0100\n"
+"POT-Creation-Date: 2018-11-18 08:37+0100\n"
+"PO-Revision-Date: 2018-11-18 08:37+0100\n"
 "Last-Translator: Enrico Sorcinelli\n"
 "Language-Team: FName LName <FName.LName>\n"
 "Language: it_IT\n"
@@ -19,54 +19,267 @@ msgstr ""
 "X-Generator: Poedit 1.8.7.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: php/class-rest-xmlrpc-data-checker-admin.php:107
+#: php/class-rest-xmlrpc-data-checker-admin.php:104
 #: php/adminpages/settings.php:58 php/adminpages/credits.php:20
 #: php/adminpages/user-fields.php:9
 msgid "REST XML-RPC Data Checker"
 msgstr "REST XML-RPC Data Checker"
 
-#: php/class-rest-xmlrpc-data-checker-admin.php:165
+#: php/class-rest-xmlrpc-data-checker-admin.php:167
 msgid "Settings"
 msgstr "Impostazioni"
 
-#: php/class-rest-xmlrpc-data-checker-admin.php:390
-#: php/adminpages/settings.php:117
+#: php/class-rest-xmlrpc-data-checker-admin.php:411
+#: php/adminpages/settings.php:140
 msgid "None"
 msgstr "Nessuna"
 
+#: php/class-rest-xmlrpc-data-checker-admin.php:494
+msgid "Overview"
+msgstr "Panoramica"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:495
+msgid ""
+"This screen is used for managing JSON REST and XML-RPC accesses and "
+"permissions to your WordPress installation."
+msgstr ""
+"Questa schermata consente di  gestire  la gestione degli accessi e dei "
+"permessu alle API JSON REST e XML-RPC  della tua installazione di WordPress."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:496
+msgid ""
+"You must click the <strong>Save Changes</strong> button at the bottom of the "
+"screen for new settings to take effect."
+msgstr ""
+"È necessario cliccare sul pulsante <strong>Salva le modifiche</strong> in "
+"fondo alla schermata per rendere effettive le modifiche apportate."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:503
 #: php/adminpages/settings.php:69
 msgid "REST"
 msgstr "REST"
 
+#: php/class-rest-xmlrpc-data-checker-admin.php:504
+msgid ""
+"The REST tab allows you to control JSON REST API requests to your WordPress "
+"installation."
+msgstr ""
+"La scheda REST consente di controllare le richieste alla API JSON REST della "
+"tua installazione WordPress."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:505
+#: php/adminpages/settings.php:79 php/adminpages/user-fields.php:12
+msgid "REST API"
+msgstr "API REST"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:505
+msgid ""
+"Allows you to completely disable JSON REST requests for unlogged users and/"
+"or disable JSONP support in the REST API (regardless of authentication and "
+"trust settings). If you don't have external applications that need to "
+"communicate with your WordPress instance using JSON REST you are strongly "
+"encouraged to disable JSON REST API for unlogged users."
+msgstr ""
+"Consente di disabilitare le richieste JSON REST per gli utenti non loggati e/"
+"o di disabilitare completamente il supporto JSONP nella API REST "
+"(indipendentemente dalle impostazioni di autenticazione e attendibilità). Se "
+"non hai applicazioni esterne che devono comunicare con la tua istanza di "
+"WordPress utilizzando le API JSON REST, si consiglia vivamente di "
+"disabilitare l'interfaccia JSON REST per utenti non loggati."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:506
+#: php/adminpages/settings.php:99
+msgid "REST prefix"
+msgstr "Prefisso REST"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:506
+#: php/adminpages/settings.php:105
+msgid "Allows to change REST prefix route."
+msgstr "Consente la modifica del prefisso  del percorso REST."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:507
+#: php/adminpages/settings.php:111
+msgid "REST Links"
+msgstr "Link REST"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:507
+msgid ""
+"Allows to remove REST API and oEmbed Discovery <code>&lt;link&gt;</code> "
+"tags and REST API <code>Link</code> HTTP header added by WordPress to front-"
+"end pages."
+msgstr ""
+"Consente di rimuovere i tag <code>&lt;link&gt;</code> REST API e oEmbed "
+"discovery e l'header HTTP <code>Link</code> della API REST aggiunti da "
+"WordPress nelle pagine di front-end."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:508
+msgid ""
+"If you need to leave REST JSON enabled, disable REST API interface for "
+"unlogged users and then grant accesses by using following settings:"
+msgstr ""
+"Se hai bisogno di lasciare attivate le API JSON REST, puoi disabilitare "
+"l'interfaccia API REST per gli utenti non loggati e quindi concedi gli "
+"accessi utilizzando le seguenti impostazioni:"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:509
+#: php/adminpages/settings.php:134
+msgid "Authentication"
+msgstr "Autenticazione"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:509
+#, php-format
+msgid ""
+"The <strong>Use Basic Authentication</strong> option enable Basic "
+"Authentication as login method. The users have to supply username/password "
+"in the %s HTTP header and the access to JSON REST API is restricted only to "
+"selected users. If you enable this option, be sure to use SSL-secured "
+"connections."
+msgstr ""
+"L'opzione <strong>Utilizza la Basic Authentication</strong> attiva la Basic "
+"Authentication come metodo di accesso. Gli utenti devono fornire nome utente/"
+"password nell'header HTTP %s e l'accesso alla API JSON REST è limitato solo "
+"agli utenti selezionati. Se abiliti questa opzione, assicurati di utilizzare "
+"connessioni protette da SSL."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:510
+#: php/class-rest-xmlrpc-data-checker-admin.php:524
+#: php/adminpages/settings.php:161 php/adminpages/settings.php:240
+msgid "Trusted netkwors"
+msgstr "Reti affidabili"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:510
+msgid ""
+"Allows you to restrict JSON REST requests only if they come from selected "
+"IPs or netowrks."
+msgstr ""
+"Consente di abilitare le richieste JSON REST solo se provengono da IP o reti "
+"specifici."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:511
+#: php/adminpages/settings.php:178
+msgid "Allowed routes"
+msgstr "Percorsi consentiti"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:511
+msgid ""
+"Allows you to restrict JSON REST requests only for selected REST routes."
+msgstr ""
+"Consente di abilitare le richieste JSON REST solo per specifici percorsi "
+"REST."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:519
 #: php/adminpages/settings.php:70
 msgid "XML-RPC"
 msgstr "XML-RPC"
 
+#: php/class-rest-xmlrpc-data-checker-admin.php:520
+msgid ""
+"The XML-RPC tab allows you to control XML-RPC API requests to your WordPress "
+"installation."
+msgstr ""
+"La scheda XML-RPC consente di controllare le richieste alla API XML-RPC "
+"della tua installazione WordPress."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:521
+#: php/adminpages/settings.php:207 php/adminpages/user-fields.php:24
+msgid "XML-RPC API"
+msgstr "XML-RPC API"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:521
+msgid ""
+"Allows you to completely disable XML-RPC requests regardless of "
+"authentication and trust settings. If you don't have external applications "
+"that need to communicate with your WordPress instance using XML-RPC API you "
+"are strongly strongly encouraged to disable XML-RPC interface."
+msgstr ""
+"Consente di disabilitare l'interfaccia XML-RPC indipendentemente dalle "
+"impostazioni di autenticazione e attendibilità. Se non hai applicazioni "
+"esterne che devono comunicare con la tua istanza di WordPress utilizzando le "
+"API XML-RPC, si consiglia vivamente di disabilitare l'interfaccia XML-RPC."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:522
+msgid ""
+"If you need to leave XML-RPC enabled, first of all be sure to use SSL-"
+"secured connections. Then you can restrict accesses by using following "
+"settings:"
+msgstr ""
+"Se hai bisogno di lasciare l'interfaccia XML-RPC abilitata, prima di tutto "
+"assicurati di usare connessioni sicure protette da SSL. Quindi puoi limitare "
+"gli accessi usando le seguenti impostazioni:"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:523
+#: php/adminpages/settings.php:226
+msgid "Trusted users"
+msgstr "Utenti affidabili"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:523
+msgid "Allows you to restrict XML-RPC API access only to selected users."
+msgstr ""
+"Consente di abilitare le richieste alle API XML-RPC solo a specifici utenti."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:524
+msgid ""
+"Allows you to restrict XML-RPC API requests only if they come from selected "
+"IPs or netowrks."
+msgstr ""
+"Consente di abilitare le richieste alle API XML-RPC solo se provengono da IP "
+"o reti specifici."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:525
+#: php/adminpages/settings.php:255
+msgid "Allowed methods"
+msgstr "Metodi consentiti"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:525
+msgid "Allows you to restrict XML-RPC API requests only for selected methods"
+msgstr ""
+"Consente di abilitare le richieste alle API XML-RPC  solo per specifici "
+"metodi."
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:533
 #: php/adminpages/settings.php:71
 msgid "Options"
 msgstr "Opzioni"
 
-#: php/adminpages/settings.php:80
-msgid "REST prefix"
-msgstr "Prefisso REST"
+#: php/class-rest-xmlrpc-data-checker-admin.php:534
+msgid "The Options tab allows you to perform following actions:"
+msgstr " La scheda Opzioni consente di eseguire le seguenti azioni:"
 
-#: php/adminpages/settings.php:86
-msgid "Allow to change REST prefix route."
-msgstr "Consente la modifica del prefisso  del percorso REST. "
+#: php/class-rest-xmlrpc-data-checker-admin.php:535
+#: php/adminpages/settings.php:282
+msgid "Plugin settings"
+msgstr "Impostazioni del plugin"
 
-#: php/adminpages/settings.php:92 php/adminpages/user-fields.php:12
-msgid "REST API"
-msgstr "API REST"
+#: php/class-rest-xmlrpc-data-checker-admin.php:535
+msgid ""
+"Allows you to completely remove options on plugin removal including "
+"additional REST/XML-RPC user's capabilities added by plugin."
+msgstr ""
+"Consente di rimuovere completamente le opzioni del plugin quando viene "
+"disinstallato, incluse le capacit&agrave; utente aggiuntive REST/XML-RPC "
+"aggiunte dal plugin."
 
-#: php/adminpages/settings.php:98
+#: php/class-rest-xmlrpc-data-checker-admin.php:543
+msgid "For more information:"
+msgstr "Per maggiori informazioni"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:544
+msgid "Plugin documentation"
+msgstr "Documentazione del plugin"
+
+#: php/class-rest-xmlrpc-data-checker-admin.php:545
+msgid "Report a bug"
+msgstr "Segnala un bug"
+
+#: php/adminpages/settings.php:85
 msgid "Disable REST API interface for unlogged users"
 msgstr "Disabilita l'interfaccia API REST per gli utenti non loggati"
 
-#: php/adminpages/settings.php:103
+#: php/adminpages/settings.php:90
 msgid "Disable JSONP support in REST API interface"
 msgstr "Disabilita il supporto JSONP nell'interfaccia API REST"
 
-#: php/adminpages/settings.php:105
+#: php/adminpages/settings.php:92
 msgid ""
 "Note this will deny all JSONP requests regardless of authentication and "
 "trust checks below."
@@ -74,30 +287,42 @@ msgstr ""
 "Nota che questo negher&agrave; tutte le richieste JSONP indipendentemente "
 "dai controlli di autenticazione e autorizzazione impostati sotto."
 
-#: php/adminpages/settings.php:111
-msgid "Authentication"
-msgstr "Autenticazione"
+#: php/adminpages/settings.php:117
+#, php-format
+msgid "Remove REST API %s tag"
+msgstr "Rimuove il tag %s REST"
 
 #: php/adminpages/settings.php:122
+#, php-format
+msgid "Remove REST API %s HTTP header"
+msgstr "Rimove l'header HTTP %s REST"
+
+#: php/adminpages/settings.php:127
+#, php-format
+msgid "Remove oEmbed discovery %s tags"
+msgstr "Rimuove i tag %s discovery oEmbed"
+
+#: php/adminpages/settings.php:145
 msgid "Use Basic Authentication"
 msgstr "Utilizza la Basic Authentication"
 
-#: php/adminpages/settings.php:124
+#: php/adminpages/settings.php:147
+#, php-format
 msgid ""
 "This allows you to restrict REST requests only for selected users. They have "
-"to supply username/password in the Basic Authentication header."
+"to supply username/password in the %s HTTP header."
 msgstr ""
 "Consente di limitare le richieste REST solo agli utenti selezionati. Nome "
-"utente e password devono essere usati nell'header Basic Authentication."
+"utente e password devono essere usati nell'header HTTP %s."
 
-#: php/adminpages/settings.php:126 php/adminpages/settings.php:193
+#: php/adminpages/settings.php:149 php/adminpages/settings.php:216
 msgid ""
 "Your WordPress installation don't appear to run under a secure connection."
 msgstr ""
 "La tua installazione di WordPress non sembra essere su un server con "
 "connessione sicura."
 
-#: php/adminpages/settings.php:128
+#: php/adminpages/settings.php:151
 msgid ""
 "This plugin requires sending your username and password with every request, "
 "and should only be used over SSL-secured connections or for local "
@@ -107,7 +332,7 @@ msgstr ""
 "richiesta e questa modalità dovrebbe essere utilizzata solo con connessioni "
 "protette in SSL o nello sviluppo e test locali."
 
-#: php/adminpages/settings.php:130
+#: php/adminpages/settings.php:153
 msgid ""
 "Without SSL you are strongly encouraged to to turn off authentication in "
 "production environments."
@@ -115,23 +340,19 @@ msgstr ""
 "Senza una connessione SSL sei fortemente incoraggiato a disattivare questa "
 "opzione negli ambienti di produzione."
 
-#: php/adminpages/settings.php:138 php/adminpages/settings.php:217
-msgid "Trusted netkwors"
-msgstr "Reti affidabili"
-
-#: php/adminpages/settings.php:142 php/adminpages/settings.php:221
+#: php/adminpages/settings.php:165 php/adminpages/settings.php:244
 msgid "Apply trusted networks criteria"
 msgstr "Applica questo controllo"
 
-#: php/adminpages/settings.php:145 php/adminpages/settings.php:224
+#: php/adminpages/settings.php:168 php/adminpages/settings.php:247
 msgid ""
 "With this option active, only requests coming form a specific IPs or "
 "newtorks are allowed."
 msgstr ""
 "Con questa opzione, saranno consentite richeiste solo da IP o reti "
-"specifiche. "
+"specifici. "
 
-#: php/adminpages/settings.php:146 php/adminpages/settings.php:163
+#: php/adminpages/settings.php:169 php/adminpages/settings.php:186
 msgid ""
 "This will applied only if REST API interface has been disabled for unlogged "
 "users."
@@ -139,35 +360,27 @@ msgstr ""
 "Questo verr&agrave; applicato solo se l'interfaccia API REST &egrave; stata "
 "disabilitata per utenti non loggati."
 
-#: php/adminpages/settings.php:148 php/adminpages/settings.php:225
+#: php/adminpages/settings.php:171 php/adminpages/settings.php:248
 msgid "Add one trusted IP or network per line"
 msgstr "Aggiungi un IP o una rete fidati per linea"
 
-#: php/adminpages/settings.php:151
+#: php/adminpages/settings.php:174
 msgid "For example: 10.10.0.1/32 , 10.10.10/25 ."
 msgstr "Ad esempio: 10.10.0.1/32 , 10.10.10/25 ."
 
-#: php/adminpages/settings.php:155
-msgid "Allowed routes"
-msgstr "Percorsi consentiti"
-
-#: php/adminpages/settings.php:159
+#: php/adminpages/settings.php:182
 msgid "Apply allowed routes criteria"
 msgstr "Applica questo controllo"
 
-#: php/adminpages/settings.php:162
+#: php/adminpages/settings.php:185
 msgid "With this option active, you can selectively allow REST routes."
 msgstr "Con questa opzione, puoi selezionare i percorsi REST. "
 
-#: php/adminpages/settings.php:184 php/adminpages/user-fields.php:24
-msgid "XML-RPC API"
-msgstr "XML-RPC API"
-
-#: php/adminpages/settings.php:189
+#: php/adminpages/settings.php:212
 msgid "Disable XML-RPC API interface"
 msgstr "Disabilita l'interfaccia API XML-RPC"
 
-#: php/adminpages/settings.php:191
+#: php/adminpages/settings.php:214
 msgid ""
 "This will deny all XML-RPC requests regardless of authentication and trust "
 "checks below."
@@ -175,7 +388,7 @@ msgstr ""
 "Nota che questo negher&agrave; tutte le richieste XML-RPC indipendentemente "
 "dai controlli di autenticazione e autorizzazione impostati sotto."
 
-#: php/adminpages/settings.php:195
+#: php/adminpages/settings.php:218
 msgid ""
 "The XML-RPC interface requires sending your username and password with every "
 "request, and should only be used over SSL-secured connections or for local "
@@ -185,7 +398,7 @@ msgstr ""
 "password ad ogni richiesta e questa modalità dovrebbe essere utilizzata solo "
 "con connessioni protette in SSL o nello sviluppo e test locali."
 
-#: php/adminpages/settings.php:197
+#: php/adminpages/settings.php:220
 msgid ""
 "Without SSL you are strongly encouraged to disable XML-RPC interface in "
 "production environments."
@@ -193,49 +406,37 @@ msgstr ""
 "Senza una connessione SSL sei fortemente incoraggiato a disattivare "
 "l'accesso alle API XML-RCP negli ambienti di produzione."
 
-#: php/adminpages/settings.php:203
-msgid "Trusted users"
-msgstr "Utenti affidabili"
-
-#: php/adminpages/settings.php:207
+#: php/adminpages/settings.php:230
 msgid "Apply trusted users criteria"
 msgstr "Applica questo controllo"
 
-#: php/adminpages/settings.php:210
+#: php/adminpages/settings.php:233
 msgid "With this option active, only selected users can access to XML-RPC API."
 msgstr ""
 "Con questa opzione, solo gli utenti selezionati hanno accesso alle API XML-"
 "RPC. "
 
-#: php/adminpages/settings.php:211
+#: php/adminpages/settings.php:234
 msgid "Select users for which enable XML-RPC"
 msgstr ""
 "Seleziona uno o più utenti per i quali abilitare l'accesso all'iterfaccia "
 "XML-RPC"
 
-#: php/adminpages/settings.php:228
+#: php/adminpages/settings.php:251
 msgid "For example: 10.10.0.1/32 or 10.10.10/25 ."
 msgstr "Ad esempio: 10.10.0.1/32 , 10.10.10/25 ."
 
-#: php/adminpages/settings.php:232
-msgid "Allowed methods"
-msgstr "Metodi consentiti"
-
-#: php/adminpages/settings.php:236
+#: php/adminpages/settings.php:259
 msgid "Apply trusted methods criteria"
 msgstr "Applica questo controllo"
 
-#: php/adminpages/settings.php:239
+#: php/adminpages/settings.php:262
 msgid "With this option active, you can selectively allow XML-RPC methods."
 msgstr ""
 "Con questa opzione, puoi selezionare i metodi da abilitare nella API XML-"
 "RPC. "
 
-#: php/adminpages/settings.php:259
-msgid "Plugin settings"
-msgstr "Impostazioni del plugin"
-
-#: php/adminpages/settings.php:263
+#: php/adminpages/settings.php:286
 msgid "Completely remove options on plugin removal."
 msgstr "Rimuovi completamente le opzioni nella rimozione del plugin."
 
@@ -311,20 +512,20 @@ msgstr "Ruolo"
 msgid "No items found."
 msgstr "Nessun elemento trovato."
 
-#: php/class-rest-xmlrpc-data-checker-rest.php:95
+#: php/class-rest-xmlrpc-data-checker-rest.php:109
 msgid "Authenticated users only can access to the REST API."
 msgstr "Solo gli utenti autenticati possono accedere all'API REST."
 
-#: php/class-rest-xmlrpc-data-checker-rest.php:104
-#: php/class-rest-xmlrpc-data-checker-rest.php:117
+#: php/class-rest-xmlrpc-data-checker-rest.php:118
+#: php/class-rest-xmlrpc-data-checker-rest.php:131
 msgid "Incorrect username or password."
 msgstr "Nome utente o password non corretti."
 
-#: php/class-rest-xmlrpc-data-checker-rest.php:135
+#: php/class-rest-xmlrpc-data-checker-rest.php:149
 msgid "Forbidden REST API request."
 msgstr "Richiesta REST API non consentita."
 
-#: php/class-rest-xmlrpc-data-checker-rest.php:154
+#: php/class-rest-xmlrpc-data-checker-rest.php:168
 msgid "No route was found matching the URL and request method."
 msgstr ""
 "Nessun percorso fornisce una corrispondenza tra l'URL e le modalità di "
